# student-lab

./: .gitignore  CODEOWNERS  README.md
.github/workflows/: alert.yaml  aws-lab-manager.yaml  azure-lab-manager.yaml  basic-lab.yaml  lab-manager.yaml  lab-ready-callback.yml
app/middleware/: main.py  pyproject.toml  test_main.py
aws/labs/basic/: backend.tf  main.tf  outputs.tf  variables.tf
aws/modules/student/: main.tf  outputs.tf  variables.tf
aws/modules/user/: variables.tf
azure/environments/prod/: backend.tf  providers.tf
azure/files/: openai_deployments.json  security_rules_basic_no_http.json  security_rules_basic_no_management.json  security_rules_basic_no_rdp.json  security_rules_basic_no_ssh.json  specific-regions-only-policy-definition.json
azure/labs/basic/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf
azure/labs/mk-7-01-ai/: main.tf  variables.tf
azure/labs/mk-7-01-az-cli/: main.tf
azure/labs/mk-7-01-az-ps/: main.tf
azure/labs/mk-7-01-lb/: main.tf  variables.tf
azure/labs/mk-7-01-portal/: main.tf  variables.tf
azure/labs/mk-7-01-vm/: variables.tf
azure/labs/mk-7-01-vmss/: main.tf  variables.tf
azure/labs/mk-7-01-webapp-node/: variables.tf
azure/labs/mk-7-01-webapp-node-docker/: main.tf  variables.tf
azure/labs/vm-linux/: main.tf
azure/labs/vm-nlb/: main.tf  providers.tf
azure/labs/vm-windows/: main.tf
azure/labs/vnet-basic/: main.tf
azure/modules/acr/: main.tf  variables.tf
azure/utils/: api-management-outputs.tf  api-management.tf  backend.tf  main.tf  providers.tf  variables.tf
utils/student/: main.py
(+27 files in other folders)
